# Building_Envelope

./: README.md
Alpha_shapes_3/: CMakeLists.txt  README  ex_alpha_shapes_3.cpp  main.cpp  visible_alpha_shape_facets_to_OFF.cpp
Alpha_shapes_3/data/: vertices
Alpha_shapes_3/inc/: constructor.cpp  constructor.h  evaluation.cpp  evaluation.h  exporter.cpp  exporter.h  mesh_processor.cpp  mesh_processor.h  off_to_obj_converter.h  off_to_obj_coverter.cpp  point_cloud_processor.cpp  point_cloud_processor.h  simplifier.cpp  simplifier.h
Distance_calculation/: CMakeLists.txt  main.cpp
Distance_calculation/inc/: evaluation.cpp  evaluation.h
IFC_Processing/: CMakeLists.txt  main.cpp
IFC_Processing/inc/: GetAllPoints.cpp  GetAllPoints.h  Individual_products.cpp  Individual_products.h  evaluation.cpp  evaluation.h  floorProcessor.cpp  floorProcessor.h  getallpoints2.cpp  getallpoints2.h  helper.cpp  helper.h  roomProcessor.cpp  roomProcessor.h  sampler.cpp  sampler.h
Intermediate_Data/: AC20-FZK-Haus.ifc_vertices  AC20-FZK-Haus.ifc_verticeswithplacement.off  AC20-Institute-Var-2.ifc_vertices_sampledspeed_testing_off.off  one_element_vertices  one_element_vertices_VAR2  outer_shape.off  outer_shape2.off  outer_shape3.off  outer_shape4.off  vertices
Intermediate_Data/OFF/: AC-20-Smiley-West-10-resampled.off  AC20-FZK-Haus.ifc_vertices_sampled_withopenningsoff.off  AC20-FZK-Haus.ifc_withopennings_20.off
Intermediate_Data/outer_shape3/: 83xtn37fl9ov.mtl
Intermediate_Data/vertices/: AC20-FZK-Haus.ifc_vertices_sampled_withopennings
